--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,15 +3,15 @@ description: Demonstrates how to use the pos_printer_manager plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  webcontent_converter: ^0.0.7 
+  webcontent_converter: ^0.0.7
 
   pos_printer_manager:
     # When depending on this package from a real application you should use:
@@ -34,7 +34,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
