--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,23 +4,24 @@ version: 0.0.5
 homepage: https://github.com/kechankrisna/pos_printer_manager
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.20.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  # flutter_blue: 
-  #   path: ./../flutter_blue  
-  esc_pos_utils_plus:  ^2.0.1+6
+  # flutter_blue:
+  #   path: ./../flutter_blue
+  flutter_esc_pos_utils_image_3:
+    ^0.1.9
     # path: ./../esc_pos_utils_plus
-  blue_thermal_printer: ^1.1.8          
+  blue_thermal_printer: ^1.1.8
   network_info_plus: ^2.1.2
   easy_logger: ^0.0.2
   printing: ^5.6.6
   win32: ^2.3.1
   ffi: ^1.1.2
-  flutter_usb_printer:  ^0.1.0
+  flutter_usb_printer: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -36,15 +37,15 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   # plugin:
-    # platforms:
-    # This plugin project was generated without specifying any
-    # platforms with the `--platform` argument. If you see the `some_platform` map below, remove it and
-    # then add platforms following the instruction here:
-    # https://flutter.dev/docs/development/packages-and-plugins/developing-packages#plugin-platforms
-    # -------------------
-      # some_platform:
-      #   pluginClass: somePluginClass
-    # -------------------
+  # platforms:
+  # This plugin project was generated without specifying any
+  # platforms with the `--platform` argument. If you see the `some_platform` map below, remove it and
+  # then add platforms following the instruction here:
+  # https://flutter.dev/docs/development/packages-and-plugins/developing-packages#plugin-platforms
+  # -------------------
+  # some_platform:
+  #   pluginClass: somePluginClass
+  # -------------------
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
