--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
     sdk: flutter
   # flutter_blue:
   #   path: ./../flutter_blue
-  flutter_esc_pos_utils_image_3:
-    ^0.1.9
+  flutter_esc_pos_utils:
+    ^0.1.8
     # path: ./../esc_pos_utils_plus
   blue_thermal_printer: ^1.1.8
   network_info_plus: ^2.1.2
