--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pos_printer_manager
 description: flutter package for print or list down both wireless and bluetooth esc printer devices.
 version: 0.0.5
-homepage: https://github.com/kechankrisna/pos_printer_manager
+publish_to: none
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -12,10 +12,13 @@ dependencies:
     sdk: flutter
   # flutter_blue:
   #   path: ./../flutter_blue
-  flutter_esc_pos_utils:
-    ^0.1.8
-    # path: ./../esc_pos_utils_plus
+
+  # path: ./../esc_pos_utils_plus
   blue_thermal_printer: ^1.1.8
+  esc_pos_utils:
+    git:
+      url: https://github.com/Heinrich-vanNieuwenhuizen/esc_pos_utils.git
+      ref: Flutter-3.10
   network_info_plus: ^2.1.2
   easy_logger: ^0.0.2
   printing: ^5.6.6
